--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
     "prettier": "3.2.5"
   },
   "dependencies": {
+    "axios": "^1.6.8",
     "cors": "^2.8.5",
     "express": "^4.19.2",
     "mysql2": "^3.9.6",
