Update dotenv example

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,6 +1,8 @@
 DB_HOST = localhost
-DB_PORT = 3000
+DB_PORT = 3306
 DB_NAME = riffroots
 DB_USER = sosar
 DB_PWD = ivero
-GENIUS_BEARER = ?
+GENIUS_BEARER = tqLv6sCXypAvVCoz0rhG9JMqhVNQvCg2zDb5zm0oTyn_OnHsgAMBY5j5krLHTuBv
+SALTROUNDS = ?
+SECRET = ?
