--- a/backend/.env.example
+++ b/backend/.env.example
@@ -4,5 +4,5 @@ DB_NAME = riffroots
 DB_USER = sosar
 DB_PWD = ivero
 GENIUS_BEARER = tqLv6sCXypAvVCoz0rhG9JMqhVNQvCg2zDb5zm0oTyn_OnHsgAMBY5j5krLHTuBv
-SALTROUNDS = ?
-SECRET = ?
+SALTROUNDS = 6
+SECRET = riffroots
