--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "start": "npm run dev"
   },
   "dependencies": {
     "@emotion/react": "^11.11.4",
@@ -31,5 +32,8 @@
     "eslint-plugin-react-refresh": "^0.4.6",
     "prettier": "3.2.5",
     "vite": "^5.2.0"
+  },
+  "engines": {
+    "node": "21.5.0"
   }
 }
