--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -1,3 +1,16 @@
 {
-  "routes": [{ "src": "/[^.]+", "dest": "/", "status": 200 }]
+  "rewrites": [
+    {
+      "source": "/:path((?!api/).*)",
+      "destination": "/index.html"
+    },
+    {
+      "source": "/:path(api/.*)",
+      "destination": "/api"
+    },
+    {
+      "src": "/[^.]+",
+      "dest": "/"
+    }
+  ]
 }
