--- a/vercel.json
+++ b/vercel.json
@@ -1,3 +1,16 @@
 {
-  "rewrites": [{ "source": "/(.*)", "destination": "/" }]
+  "rewrites": [
+    {
+      "source": "/:path((?!api/).*)",
+      "destination": "/index.html"
+    },
+    {
+      "source": "/:path(api/.*)",
+      "destination": "/api"
+    },
+    {
+      "src": "/[^.]+",
+      "dest": "/"
+    }
+  ]
 }
