--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,3 @@
 {
-  "rewrites": [
-    {
-      "source": "/:path((?!api/).*)",
-      "destination": "/index.html"
-    },
-    {
-      "source": "/:path(api/.*)",
-      "destination": "/api"
-    }
-  ]
+  "rewrites": [{ "source": "/(.*)", "destination": "/index.html" }]
 }
