--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,10 @@
 {
-  "rewrites": [
-    {
-      "source": "/(.*)",
-      "destination": "/"
-    }
+  "routes": [
+    { "src": "/", "dest": "/" },
+    { "src": "/signin", "dest": "/" },
+    { "src": "/singup", "dest": "/" },
+    { "src": "/search", "dest": "/" },
+    { "src": "/songs/(.*)", "dest": "/" },
+    { "src": "/users/(.*)", "dest": "/" }
   ]
 }
